[tool.poetry]
name = "langgraph_with_gemni"
version = "0.1.0"
description = ""
authors = ["Hamza Qureshi - Desktop <hamza7771.861@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.14"
langchain-core = "^0.3.28"
langgraph = "^0.2.60"
langchain-google-genai = "^2.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
